include(GoogleTest)

set(AME_SOURCE_DIR "${AME_ROOT_DIR}")

add_executable(test_world_model test_world_model.cpp)
target_link_libraries(test_world_model PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_world_model DISCOVERY_MODE PRE_TEST)

add_executable(test_action_registry test_action_registry.cpp)
target_link_libraries(test_action_registry PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_action_registry DISCOVERY_MODE PRE_TEST)

add_executable(test_plan_compiler test_plan_compiler.cpp)
target_link_libraries(test_plan_compiler PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_plan_compiler DISCOVERY_MODE PRE_TEST)

add_executable(test_pddl_parser test_pddl_parser.cpp)
target_link_libraries(test_pddl_parser PRIVATE ame_core GTest::gtest_main)
target_compile_definitions(test_pddl_parser PRIVATE "PROJECT_SOURCE_DIR=\"${AME_SOURCE_DIR}\"")
gtest_discover_tests(test_pddl_parser DISCOVERY_MODE PRE_TEST)

add_executable(test_planner test_planner.cpp)
target_link_libraries(test_planner PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_planner DISCOVERY_MODE PRE_TEST)

add_executable(test_integration test_integration.cpp)
target_link_libraries(test_integration PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_integration DISCOVERY_MODE PRE_TEST)

add_executable(test_e2e_pipeline test_e2e_pipeline.cpp)
target_link_libraries(test_e2e_pipeline PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_e2e_pipeline DISCOVERY_MODE PRE_TEST)

add_executable(test_observability test_observability.cpp)
target_link_libraries(test_observability PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_observability DISCOVERY_MODE PRE_TEST)

add_executable(test_e2e_spatial_routing test_e2e_spatial_routing.cpp)
target_link_libraries(test_e2e_spatial_routing PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_e2e_spatial_routing DISCOVERY_MODE PRE_TEST)

add_executable(test_extensions test_extensions.cpp)
target_link_libraries(test_extensions PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_extensions DISCOVERY_MODE PRE_TEST)

add_executable(test_multi_agent test_multi_agent.cpp)
target_link_libraries(test_multi_agent PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_multi_agent DISCOVERY_MODE PRE_TEST)

add_executable(test_world_model_component test_world_model_component.cpp)
target_link_libraries(test_world_model_component PRIVATE ame_core GTest::gtest_main)
gtest_discover_tests(test_world_model_component DISCOVERY_MODE PRE_TEST)

add_executable(test_planner_component test_planner_component.cpp)
target_link_libraries(test_planner_component PRIVATE ame_core GTest::gtest_main)
target_include_directories(test_planner_component PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
gtest_discover_tests(test_planner_component DISCOVERY_MODE PRE_TEST)

add_executable(test_executor_component test_executor_component.cpp)
target_link_libraries(test_executor_component PRIVATE ame_core GTest::gtest_main)
target_include_directories(test_executor_component PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
gtest_discover_tests(test_executor_component DISCOVERY_MODE PRE_TEST)
